integration_tests/tests/compile/fail_ulogmessages_multi.stderr
error: Only one variant may have #[yule_log(forward_other)].
  --> tests/compile/fail_ulogmessages_multi.rs:12:5
   |
12 | /     #[yule_log(forward_other)]
13 | |     B(B),
   | |________^
